[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
sqlx-cli = { version = "0.7.4", features = ["postgres", "rustls"] }
futures = "0.3.30"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.release]
codegen-units = 1
opt-level = 3
